# SVG-Editor

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.css  index.html  index.js  snippet.html  svg.html  svg.js  svgviewer.css  svgviewer.html  utils.js
app/src/main/java/psycho/euphoria/svg/: AppService.java  CustomWebChromeClient.java  CustomWebViewClient.java  MainActivity.java  PublicFileProvider.java  Shared.java  WebAppInterface.java
app/src/main/jni/: CMakeLists.txt  httplib.h  md4c-html.c  nativelib.cpp  server.cpp  server.cpp~  server.h  server_utils.cpp  server_utils.h  shared.cpp
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
